agrego edicion de avatar para el suario,  implementando multer

--- a/spellBook/public/stylesheets/register.css
+++ b/spellBook/public/stylesheets/register.css
@@ -14,16 +14,14 @@
     margin-top: 15px;
 }
 
-.user-image {
-   
+/* .user-image {   
     text-align: right;
     width:fit-content ;
-}
+} */
 
 .user-image-item {
     border-radius: 50%;
-    width: 40%;
-    max-height: 300px;
+    width: 150px;
 }
 
 /* BARITA */
