--- a/spellBook/public/stylesheets/styles.css
+++ b/spellBook/public/stylesheets/styles.css
@@ -34,6 +34,9 @@
     flex-direction: column;
     align-items: center;
 }
+.f-1rem {
+    font-size: 1rem;
+}
 /* EFECTO DE LOS LIBROS */
 .book-cover {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
