--- a/spellBook/src/views/products/productDetail.ejs
+++ b/spellBook/src/views/products/productDetail.ejs
@@ -41,6 +41,12 @@
             <i class="fas fa-cart-plus icon-cart"></i> Agregar al Carrito
           </button>
           </div>
+          <% if (locals.inLogged) { %>
+            <% if (locals.userLog.rol === "admin") { %>
+          <div class="card__box">
+            <a href="/admin/editProduct/<%= idBook.id %>" class="cart text-center fit-content"> Editar </a>
+          </div>
+          <% }} %> 
           <div class="descriptions descriptions--top">
             <h3 class="descriptions__title">Sinopsis</h3>
             <p class="descriptions__paragraph">
