se crea vista, ruta y controlador para que el admin modifique datos de los usuarios, se aplica midelwares y multer

--- a/spellBook/public/stylesheets/admin.css
+++ b/spellBook/public/stylesheets/admin.css
@@ -229,6 +229,13 @@ form#product fieldset input.display-shop{
     border-radius: 50%;
     width: 100px;
 }
+/* ROL DE USUARIO */
+.rol-user{
+    display: flex;
+    text-align: center;
+    font-size: 1rem;
+    align-items: center;
+}
 
 @media (min-width: 515px) {
     table {
