--- a/spellBook/public/stylesheets/register.css
+++ b/spellBook/public/stylesheets/register.css
@@ -2,7 +2,7 @@
 .conteiner-main {
     max-width: 400px;
     margin: 0 auto;
-    padding-top: 50px;
+    padding: 50px 0;
 }
 
 /*  FORMULARIO DE REGISTRO */
