--- a/spellBook/src/views/admin/userAdmin.ejs
+++ b/spellBook/src/views/admin/userAdmin.ejs
@@ -22,7 +22,7 @@
     <!--LIST OF PRODUCTS SECTION-->
     <section class="product-list">
       <!--LINKS TO Agregar libro, Bell AND user-->
-      <h1>Hola <%= locals.userLog.name %> </h1>
+      <h1>Hola </h1>
       <div class="belluser">
         <a href="/admin/addProduct" class="display-shop" >Ir a libros</a>
         <a href="/user/login">
@@ -58,12 +58,12 @@
           <tbody class="text-center">             
             <% users.forEach(user => { %>
             <tr>
-              <td><img src="/images/Imagenes de perfil/<%= user.avatar%>" class="admin-avatars"></td>
-              <td><%= user.email%></td>
-              <td><%= user.name%></td>
-              <td><%= user.last_name%></td>
-              <td><%= user.country%></td>
-              <td><%= user.rol%></td>
+              <td><a href="/users/<%= user.id %> "><img src="/images/Imagenes de perfil/<%= user.avatar%>" class="admin-avatars"></a></td>
+              <td><a href="users/<%= user.id %> "><%= user.email%></a></td>
+              <td><a href="/users/<%= user.id %> "><%= user.name%></a></td>
+              <td><a href="/users/<%= user.id %> "><%= user.last_name%></a></td>
+              <td><a href="/users/<%= user.id %> "><%= user.country%></a></td>
+              <td><a href="/users/<%= user.id %> "><%= user.rol%></a></td>
               <td>
                 <form action="deleteUser/<%=user.id%>?_method=DELETE" id="button-delete-user" method="POST">
                   <button class="delete-btn" type="submit"><i class="far fa-trash-alt"></i></button>
