--- a/spellBook/public/stylesheets/variables.css
+++ b/spellBook/public/stylesheets/variables.css
@@ -1,45 +1,48 @@
 :root {
-    --color-beige : #FFF3E6;
-    --color-azulOscuro : #0D335D;
-    --color-azulClaro : #1A508B;
-    --color-violeta : #C1A1D3;
+  --color-beige : #FFF3E6;
+  --color-azulOscuro : #0D335D;
+  --color-azulClaro : #1A508B;
+  --color-violeta : #C1A1D3;
 
-    /* FUENTES */
-    --font-berkshire : 'Berkshire Swash';
-    --font-roboto : 'Roboto', sans-serif;
-    
-    /* Tamaños */
-    --paragraph : 1rem;
-    --icon : 2rem;
-    --title: 2.1rem;
-    --btn : 1.2rem;
-    --discounts-descriptions : 1.4rem;
+  /* FUENTES */
+  --font-berkshire : 'Berkshire Swash';
+  --font-roboto : 'Roboto', sans-serif;
+  
+  /* Tamaños */
+  --paragraph : 1rem;
+  --icon : 1.4rem;
+  --title: 2.1rem;
+  --btn : 1.2rem;
+  --discounts-descriptions : 1.4rem;
 
 
-     /* SombreadoS */
-     --box-shadow-images: 4px 4px 4px rgba(0, 0, 0, 0.5);
-     --box-shadow-button: 2px 2px 2px rgba(0, 0, 0, 0.5);
+   /* SombreadoS */
+   --box-shadow-images: 4px 4px 4px rgba(0, 0, 0, 0.5);
+   --box-shadow-button: 2px 2px 2px rgba(0, 0, 0, 0.5);
+
 }
 
 /* REGLAS GENERALES */
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+box-sizing: border-box;
+margin: 0;
+padding: 0;
+outline: none;
+border: none;
 }
 
 body {
-    background-color: var(--color-beige);
-    font-family: var(--font-roboto);
-    font-size: 62.5%;
-    color: var(--color-azulOscuro);
-  }
+  background-color: var(--color-beige);
+  font-family: var(--font-roboto);
+  font-size: 62.5%;
+  color: var(--color-azulOscuro);
+}
 
 li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 a {
-    text-decoration: none;
-    color: var(--color-azulOscuro);
+  text-decoration: none;
+  color: var(--color-azulOscuro);
 }
