se agrega eliminacion de imagen de producto

--- a/spellBook/src/views/products/productDetail.ejs
+++ b/spellBook/src/views/products/productDetail.ejs
@@ -37,7 +37,7 @@
             </p>
           </div>
           <div class="card__box">
-          <button class="cart button">
+          <button class="cart text-center fit-content">
             <i class="fas fa-cart-plus icon-cart"></i> Agregar al Carrito
           </button>
           </div>
