--- a/spellBook/public/stylesheets/styles.css
+++ b/spellBook/public/stylesheets/styles.css
@@ -53,14 +53,20 @@
 
 /* BOTON EFECTO */
 .button {
-    background-color: var(--color-azulOscuro);
-    border: none;
-    border-radius: 2px;
+    float:right;
+    padding:8px 12px;
+    margin:20px 0 20px 0;
+    font-family: var(--font-roboto);
+    border:2px solid var(--color-azulClaro);
+    background: var(--color-azulClaro);
     color: var(--color-beige);
+    cursor:pointer;transition:all .3s;
+border-radius: 5px;
+font-size: 15px;
    
 }
 .button:hover{
     transition: all 0.5s ease-in-out;
-    background-color: var(--color-azulClaro);
+    background-color: var(--color-azulOscuro);
     cursor: pointer;
 }
